project/log/20250930_145719.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

Compile Succeded, path:object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:object3D.PS.hlsl, profile:ps_6_0

object3D.PS.hlsl:52:67: error: invalid format for vector swizzle 'color'
            output.color.rgb = gMaterial.color.rgb * textureColor.color.rgb*gDirectionlLight.color.rgb*cos*gDirectionlLight.intensity;
                                                                  ^
object3D.PS.hlsl:61:66: error: invalid format for vector swizzle 'color'
           output.color.rgb = gMaterial.color.rgb * textureColor.color.rgb*gDirectionlLight.color.rgb*cos*gDirectionlLight.intensity;
                                                                 ^

